--- a/index.html
+++ b/index.html
@@ -10,12 +10,22 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0">
-
+            <iframe src="imagens/iphone4.png" name="tela" id="tela" frameborder="0">
+                Seu navergador não é compatível com isso.
             </iframe>
         </section>
         <section id="redes-sociais">
+           <a href="" target="tela"><img src="imagens/logo-home.jpg" alt="logo-home"></a> <br>
 
+           <a href="" target="tela"><img src="imagens/logo-youtube.jpg" alt="logo-youtube"></a>  <br>           
+           <a href="" target="tela"><img src="imagens/logo-github.jpg" alt="logo-github"></a> <br>
+
+           <a href="" target="tela"><img src="imagens/logo-instagram.jpg" alt="logo-instagram"></a> <br>
+
+           <a href="" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a> <br>
+
+           <a href="" target="tela"><img src="imagens/logo-facebook.jpg" alt="logo-facebook"></a> <br>
+        
         </section>
     </main>
 </body>
