--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     body {
         width: 100vw;
         height: 100vh;
-        background: black url() no-repeat top center;
+        background: black url('../projeto-social/imagens/tela-home.jpg') no-repeat top center;
         
     }
 </style>
